Add method for update user profile
