# server/docs/swagger-output.json
@@ -317,10 +317,59 @@
         ]
       },
       "put": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update profile end-point.",
+        "description": "This is the end-point to update user profile.",
+        "operationId": "updateProfile",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response400Schema"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response404Schema"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/RequestUpdateProfileSchema"
+              }
+            }
           }
         }
       },
@@ -456,6 +505,42 @@
             "type": "string",
             "example": "12345678",
             "description": "Users password"
+          }
+        }
+      },
+      "RequestUpdateProfileSchema": {
+        "type": "object",
+        "required": [],
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "John_Doe",
+            "description": "Users username"
+          },
+          "firstName": {
+            "type": "string",
+            "example": "John",
+            "description": "Users First name"
+          },
+          "lastName": {
+            "type": "string",
+            "example": "Doe",
+            "description": "Users Last name"
+          },
+          "gender": {
+            "type": "string",
+            "example": "male",
+            "description": "Users gender"
+          },
+          "isAdmin": {
+            "type": "boolean",
+            "example": true,
+            "description": "Users role"
+          },
+          "avatar": {
+            "type": "string",
+            "format": "binary",
+            "description": "Users avatar file in multipart"
           }
         }
       },
